--- a/demo3_1/pom.xml
+++ b/demo3_1/pom.xml
@@ -81,7 +81,19 @@
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-binding</artifactId>
         </dependency>
-        
+	    
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>3.0.0</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-jaxb</artifactId>
+            <version>3.0.2</version><!--$NO-MVN-MAN-VER$-->
+        </dependency>
+	    
     </dependencies>
     <properties>
         <jersey.version>3.1.0</jersey.version>
